--- a/index.html
+++ b/index.html
@@ -55,24 +55,26 @@
 			</div>
 		</div>
 
-		<div class="grid_4">
-			<div class="price">
-				<h2 class="amount">50K</h2>
-				<p>2 revisions. 5K per revision after the 2nd.</p>
+		<div class="prices">
+			<div class="grid_4">
+				<div class="price">
+					<h2 class="amount">50K</h2>
+					<p>2 revisions. 5K per revision after the 2nd.</p>
+				</div>
 			</div>
-		</div>
 
-		<div class="grid_4">
-			<div class="price">
-				<h2 class="amount">75K</h2>
-				<p>2 revisions. 5K per revision after the 2nd.</p>
+			<div class="grid_4">
+				<div class="price">
+					<h2 class="amount">75K</h2>
+					<p>2 revisions. 5K per revision after the 2nd.</p>
+				</div>
 			</div>
-		</div>
 
-		<div class="grid_4">
-			<div class="price">
-				<h2 class="amount">145K</h2>
-				<p>5 revisions. 5K per revision after the 5th.</p>
+			<div class="grid_4">
+				<div class="price">
+					<h2 class="amount">145K</h2>
+					<p>5 revisions. 5K per revision after the 5th.</p>
+				</div>
 			</div>
 		</div>
 
@@ -84,7 +86,7 @@
 
 		<footer class="grid_12">
 			<h1>Brendan Pixels</h1>
-			<p><a href="https://selar.co/zcl7" target="_blank" rel="noopener noreferrer"><strong>SIGN UP</strong></a>FOR OUR 30 DAYS ADOBE
+			<p><a href="https://selar.co/zcl7" target="_blank" rel="noopener noreferrer"><strong>SIGN UP</strong></a> FOR OUR 30 DAYS ADOBE
 					ILLUSTRATOR FOR LOGO DESIGNERS CHALLENGE
 			</p>
 			<a href="https://www.instagram.com/brendanpixels?igsh=MzRlODBiNWFlZA==" target="_blank" rel="noopener noreferrer"><h1 class="h1-2">Brendan Pixels</h1></a>
