--- a/index.html
+++ b/index.html
@@ -72,13 +72,18 @@
                 <strong>ALSO NOTE:</strong> We deliver within 14 working days, at least.
             </p>
         </div>
-
+        <br>
         <footer class="grid_12">
             <h1>Brendan Pixels</h1>
-            <p><a href="https://selar.co/zcl7" target="_blank" rel="noopener noreferrer"><strong>SIGN UP</strong></a> FOR OUR 30 DAYS ADOBE
-                ILLUSTRATOR FOR LOGO DESIGNERS CHALLENGE
+            <p>
+                <a href="https://selar.co/zcl7" target="_blank" rel="noopener noreferrer">
+                    <strong>SIGN UP</strong>
+                </a>
+                FOR OUR 30 DAYS ADOBE ILLUSTRATOR FOR LOGO DESIGNERS CHALLENGE
             </p>
-            <a href="https://www.instagram.com/brendanpixels?igsh=MzRlODBiNWFlZA==" target="_blank" rel="noopener noreferrer"><h1 class="h1-2">Brendan Pixels</h1></a>
+            <a href="https://www.instagram.com/brendanpixels?igshid=MzRlODBiNWFlZA==" target="_blank" rel="noopener noreferrer">
+                <h1 class="h1-2">Brendan Pixels</h1>
+            </a>
         </footer>
     </div>
 </body>
