--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                 </a>
                 FOR OUR 30 DAYS ADOBE ILLUSTRATOR FOR LOGO DESIGNERS CHALLENGE
             </p>
-            <a href="https://www.instagram.com/brendanpixels?igshid=MzRlODBiNWFlZA==" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.instagram.com/brendanpixels?igshid=MzRlODBiNWFlZA==" target="_blank"
+                rel="noopener noreferrer">
                 <h1 class="h1-2">Brendan Pixels</h1>
             </a>
         </footer>
